# really-fast-csv-validator

./: Cargo.toml  main.py  pyproject.toml  test_data.csv
src/: lib.rs
