[package]
name = "really-fast-csv-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "really_fast_csv_validator"
crate-type = ["cdylib"]

[dependencies]
csv = "1.2.2"
pyo3 = "0.19.0"
serde = "1.0.188"
